@@ -27,6 +27,7 @@
 - fix non multi-mount recursive mounts.
 - fix master map bogus keywork match.
 - add missing sasl mutex callbacks.
+- fix parse_sun() module init.
 
 03/09/2009 autofs-5.0.5
 -----------------------
